logs/useful-inkleby.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/useful_inkleby'...
Listing './lib/python3.5/site-packages/useful_inkleby/data'...
Listing './lib/python3.5/site-packages/useful_inkleby/decorators'...
Listing './lib/python3.5/site-packages/useful_inkleby/files'...
Compiling './lib/python3.5/site-packages/useful_inkleby/files/ucsv.py'...
***   File "./lib/python3.5/site-packages/useful_inkleby/files/ucsv.py", line 132
    raise ValueError, \
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/useful_inkleby/scape_code.py'...
***   File "./lib/python3.5/site-packages/useful_inkleby/scape_code.py", line 15
    print x
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/useful_inkleby/temp_analysis.py'...
***   File "./lib/python3.5/site-packages/useful_inkleby/temp_analysis.py", line 181
    print x,y
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/useful_inkleby/useful_django'...
Listing './lib/python3.5/site-packages/useful_inkleby/useful_django/admin'...
Listing './lib/python3.5/site-packages/useful_inkleby/useful_django/fields'...
Listing './lib/python3.5/site-packages/useful_inkleby/useful_django/forms'...
Listing './lib/python3.5/site-packages/useful_inkleby/useful_django/management'...
Listing './lib/python3.5/site-packages/useful_inkleby/useful_django/models'...
Listing './lib/python3.5/site-packages/useful_inkleby/useful_django/serialisers'...
Listing './lib/python3.5/site-packages/useful_inkleby/useful_django/views'...
Compiling './lib/python3.5/site-packages/useful_inkleby/useful_django/views/bake.py'...
***   File "./lib/python3.5/site-packages/useful_inkleby/useful_django/views/bake.py", line 25
    print "syncing {0}".format(d)
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/useful_inkleby-0.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
